# ferrumc

./: .gitignore  Cargo.toml  README.md
plugins/demoplugin/: demoplugin.wasm  plugin.yaml
src/: lib.rs  main.rs  setup.rs
src/crates/ferrumc_macros/src/: encode.rs  lib.rs  profile.rs
src/database/: chunks.rs  mod.rs
src/lib/adapters/nbt/: Cargo.toml
src/lib/core/src/: lib.rs
src/lib/net/: Cargo.toml
src/lib/net/crates/codec/: Cargo.toml
src/lib/net/crates/codec/src/net_types/: var_int.rs
src/lib/net/src/: connection.rs  lib.rs
src/lib/plugins/: Cargo.toml
src/lib/plugins/src/: errors.rs  lib.rs  loading.rs  plugin_funcs.rs  registry.rs
src/lib/plugins/src/api/: logging.rs  mod.rs
src/lib/storage/: Cargo.toml
src/lib/storage/src/: lib.rs
src/lib/storage/src/backends/: envvars.rs  mod.rs  redb.rs  rocksdb.rs  sled.rs  surrealkv.rs
src/lib/storage/src/benches/: databases.rs
src/lib/storage/src/compressors/: gzip.rs  mod.rs
src/lib/utils/config/src/: server_config.rs
src/lib/utils/logging/src/: lib.rs
src/lib/world/: Cargo.toml
src/lib/world/src/: chunk_format.rs  db_functions.rs  errors.rs  lib.rs  vanilla_chunk_format.rs
src/net/: mod.rs
src/net/packets/incoming/: login_start.rs
src/net/packets/outgoing/: chunk_and_light_data.rs
src/net/systems/: chunk_sender.rs
src/plugins/: Cargo.toml
src/utils/: config.rs  constants.rs  error.rs  mod.rs  profiler.rs
