[package]
name = "ferrumc-plugins"
description = "FerrumC WebAssembly plugin integration."
version = "0.1.0"
edition = "2021"

[dependencies]
extism = { workspace = true }
tokio = { workspace = true }
hashbrown = { workspace = true }
tracing = { workspace = true }
serde_yaml = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tinyvec = { workspace = true }
parking_lot = { workspace = true }
extism-pdk = { workspace = true }

ferrumc-net = { workspace = true }
ferrumc-net-encryption = { workspace = true }